Use public repositories.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 # Version.
 version = 0.0-SNAPSHOT
 
-# Repository settings.
-mavenThirdPartyRepository = https://nexus.arin.net/repository/arin/
-mavenSnapshotRepository = https://nexus.arin.net/repository/snapshots/
-mavenReleasesRepository = https://nexus.arin.net/repository/releases/
+# Repositories.
+repoMavenApacheOrgRepository = https://repo.maven.apache.org/maven2/
+pluginsGradleOrgRepository = https://plugins.gradle.org/m2/
+mvnrepositoryComRepository = https://mvnrepository.com/artifact/
+mavenRepositoryRedhatComRepository = https://maven.repository.redhat.com/ga/
 
 # JVM settings for Gradle.
 org.gradle.jvmargs = -Xms256m -Xmx1g
