Opening java.lang package in the java.base module to fix most mock-related test issues.

--- a/template_processor/build.gradle
+++ b/template_processor/build.gradle
@@ -39,5 +39,11 @@ dependencies {
 }
 
 test {
+    doFirst {
+        jvmArgs = [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+        ]
+    }
+
     systemProperty 'arin.template.processor.baseurl_public', 'https://account.arin.net/public'
 }
