--- a/config/.env
+++ b/config/.env
@@ -6,7 +6,7 @@ TP_POP3_HOST=docker.for.mac.host.internal
 TP_POP3_PORT=3110
 TP_POP3_USER=hostmaster@dev.arin.net
 TP_POP3_PASSWORD=hostmaster@dev.arin.net
-TP_REGRWS_URL=http://docker.for.mac.host.internal:8084/regcore/seam/resource/rest
+TP_REGRWS_URL=http://docker.for.mac.host.internal:8084/rest
 TP_API_KEY=***PLACE_VALUE_HERE***
 #TP_LOG_LEVEL=DEBUG
 TZ=America/New_York
